[package]
name = "yarg"
version = "0.1.0"
authors = ["Alex Legg <alex@legg.info>"]
edition = "2018"

[[bin]]
name = "yarg"
path = "src/main.rs"

[[bin]]
name = "yargas"
path = "src/asm/main.rs"

[dependencies]
sdl2 = { version = "0.31.0", features = ["bundled"] }
lazy_static = "1.1.0"
failure = "0.1.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "memoryapi"] }